@@ -1,7 +1,7 @@
 RainbruRPG - A 3D multiplayer Role Playing Game project based on Ogre3D.
 
 o [Carine] cross-compilation to win32
-./bootstrap&&./configure --host=i586-mingw32msvc --prefix=/usr/cross/ --enable-Wno-stddep-ogre
+./bootstrap&&./configure --host=i586-mingw32msvc --prefix=/usr/cross/   --enable-Wno-stddep-ogre --enable-debug
 - Fixing maincore lib size (310Mo) (see and update doc_cross_compil)
 
 o [rainbru] Fixing some OgreGui related graphical bugs
@@ -130,7 +130,8 @@ A system that serialize widgets position and configuration
    Libraries versionning in doc/libVersionning.html and configure.in
 
 * v 0.0.5-195 (22 aug 2009 - ???)
-- (7) Made messages translatable using gettext in maincore/
+- (8) Making more logging in common/GlobalURI for cross-compil
+- Made messages translatable using gettext in maincore/
    gameengine, gamestate, gsgamebase, gslocaltest
 - Made messages translatable using gettext in maincore/
    dumpogreobject, environmentsetup
